@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfprint-4.5.92.tar.bz2 848627 RMD160 b406d69eff71369ecf3bf88a907906c2e50357e1 SHA1 e0b30252a7d210eaa09c6044d3943d06ede0214e SHA256 4013fd40f948abae0b547be31bc0d73fd7df5619be2483afb1bd3cca9264790a
 DIST xfprint-4.5.93.tar.bz2 841462 RMD160 344cad7f8f483cdacf680e3b110e38e7df328ab2 SHA1 ce8c05fd4e363ebf888478fa4b703c72534b091d SHA256 addd53a7103814f127bbf3a4bb5b9fec62f1db475a3377b441c045d5cb83cc1e
+DIST xfprint-4.5.99.1.tar.bz2 827841 RMD160 faedab15303a524aa23324f1d4dfb4524a3368f5 SHA1 8d3c6a01131e7a71c8592658b96c41d5532076c1 SHA256 4b7b68938febf9fb498582f20de88ddf099daffcaf367a36ba30daedaed2f117
 EBUILD xfprint-4.5.92.ebuild 949 RMD160 383fc9e020accf85751700ed2364cf2b5c100e0b SHA1 a67ab9043094804f0832473a37dd8ba1e21b5eb9 SHA256 ddd467cbf850722ffbf13f8815c5fa7ef502ba6bbdf0cfc33e1c45ecdf3ff7b0
 EBUILD xfprint-4.5.93.ebuild 949 RMD160 383fc9e020accf85751700ed2364cf2b5c100e0b SHA1 a67ab9043094804f0832473a37dd8ba1e21b5eb9 SHA256 ddd467cbf850722ffbf13f8815c5fa7ef502ba6bbdf0cfc33e1c45ecdf3ff7b0
+EBUILD xfprint-4.5.99.1.ebuild 949 RMD160 383fc9e020accf85751700ed2364cf2b5c100e0b SHA1 a67ab9043094804f0832473a37dd8ba1e21b5eb9 SHA256 ddd467cbf850722ffbf13f8815c5fa7ef502ba6bbdf0cfc33e1c45ecdf3ff7b0
 EBUILD xfprint-9999.ebuild 1035 RMD160 e82465e3f7fecfd52ca0ac2623b60b25ada6b231 SHA1 ff6999eef60bf3b5d5795278d9436e1a87c71b9f SHA256 9e80e8f023ad3628a0faa1f582c9790d0efd92ec863ca99366fc1a800891c4a7
-MISC ChangeLog 1046 RMD160 d07e962a3a9276138b916c55b4b0a774308494fd SHA1 438ca5ac024d2ec4b4413cc52ffa10a9ab16f77e SHA256 512352cdfa1c5569ab47a359fec6c64ab229ef58589c18b5cb20f8345cf20317
+MISC ChangeLog 1175 RMD160 5b84ff48e24bb35e8696403ccc02915e95fa92ab SHA1 0b3d0048c5a71b08b3194a9cae68692d08d94d59 SHA256 8dc2d877cdb06eede8813a2992c34c985551b8dc7c3096815a866a3b4b068fcd
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEekACgkQKhnDs22gwa/ibACfXurZLo2dTKACsHbZdz8Zd0hJ
-ftoAnA5f5uGb8MaEanAgQ3h0Nwy0w5es
-=jhw9
+iEYEARECAAYFAkl9xWMACgkQKhnDs22gwa8s0ACg8v+dQV7/lfvGYOXeJUhxy/v5
+O5MAoJgs9Uk2rEtWcxcmyrTprrxGMeyG
+=kZrD
 -----END PGP SIGNATURE-----
